# PaperRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ShaderCompile.bat  ShaderCompile.py  ShaderCompile.sh
docs/: docs.html  script.js  stylesheet.css
example/: CMakeLists.txt  README.md  ShaderCompile.py  main.cpp
example/models/: PaperRendererExample.glb
example/resources/models/: PaperRendererExample.glb
example/resources/shaders/: BasicAnimation.comp  BufferCopy.frag  Default.frag  Default.vert  Quad.vert  hitcommon.glsl  leaf.frag  leaf.glsl  leaf.rahit  leaf.rchit  pbr.glsl  random.glsl  raycommon.glsl  raytrace.rahit  raytrace.rchit  raytrace.rgen  raytrace.rmiss
example/shaders/: Default.frag  Default.vert  hitcommon.glsl  raytrace.rchit  raytrace.rgen
example/src/: Common.cpp  Common.h  ComputePipelines.cpp  ComputePipelines.h  GuiRender.cpp  GuiRender.h  Materials.cpp  Materials.h  RenderPasses.cpp  RenderPasses.h  main.cpp
lib/: build.sh
lib/VulkanMemoryAllocator/: CMakeLists.txt
lib/assimp/: CMakeLists.txt
lib/glfw/: CMakeLists.txt
lib/glm/: CMakeLists.txt
resources/shaders/: Common.glsl  IndirectDrawBuild.comp  TLASInstBuild.comp
src/PaperRenderer/: AccelerationStructure.cpp  AccelerationStructure.h  Camera.cpp  Camera.h  Command.cpp  Command.h  ComputeShader.cpp  ComputeShader.h  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  IndirectDraw.cpp  IndirectDraw.h  Material.cpp  Material.h  Model.cpp  Model.h  PaperRenderer.cpp  PaperRenderer.h  Pipeline.cpp  Pipeline.h  RayTrace.cpp  RayTrace.h  RenderPass.cpp  RenderPass.h  StagingBuffer.cpp  StagingBuffer.h  Statistics.cpp  Statistics.h  Swapchain.cpp  Swapchain.h  VulkanMemory.cpp  VulkanMemory.h  VulkanResources.cpp  VulkanResources.h
src/PaperRenderer/RHI/: AccelerationStructure.cpp  AccelerationStructure.h  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  IndirectDraw.cpp  IndirectDraw.h  IndirectDrawBuffer.cpp  IndirectDrawBuffer.h  Pipeline.cpp  Pipeline.h  Swapchain.cpp  Swapchain.h  Window.h
src/PaperRenderer/RHI/Memory/: Command.cpp  Command.h  VulkanMemory.cpp  VulkanMemory.h  VulkanResources.cpp  VulkanResources.h
src/PaperRenderer/Shaders/: BLASInstBuild.comp  Common.glsl  Default.frag  Default.vert  IndirectDrawBuild.comp  TLASInstBuild.comp
src/Renderer/: Camera.cpp  Camera.h  Light.h  Material.cpp  Material.h  Model.cpp  Model.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h
src/Renderer/Material/: Material.cpp  Material.h
src/Renderer/Material/Shaders/: Default.frag  Default.vert
src/Renderer/Material/Shaders/Components/: Common.glsl  PBR.glsl
src/Renderer/Material/Shaders/Compute/: IndirectDrawBuild.comp
src/Renderer/RHI/: AccelerationStructure.cpp  AccelerationStructure.h  Buffer.cpp  Buffer.h  Command.cpp  Command.h  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  IndirectDrawBuffer.cpp  IndirectDrawBuffer.h  Pipeline.cpp  Pipeline.h  Swapchain.cpp  Swapchain.h  Window.cpp  Window.h
src/Renderer/RHI/Memory/: Command.cpp  Command.h  VulkanMemory.cpp  VulkanMemory.h  VulkanResources.cpp  VulkanResources.h
src/Renderer/Shaders/: Default.frag  Default.vert  IndirectDrawBuild.comp  TLASInstBuild.comp
